--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "autoprefixer": "^9.8.0",
     "browser-sync": "^2.26.7",
+    "chalk": "^4.1.0",
     "esm": "^3.2.25",
     "gh-pages": "^3.0.0",
     "gulp": "^4.0.2",
@@ -41,6 +42,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
+    "ora": "^4.0.4",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.1",
     "run-applescript": "^4.0.0",
