[WIP] Add NPM script to process Sketch data right after fetching it.
Runtime scripts will be updated in the next commits to receive the data already processed.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp build",
-    "get-colors": "node ./scripts/get-colors.js",
+    "get-colors": "node ./scripts/get-colors.js && node ./scripts/data.js",
     "publish": "node ./scripts/publish.js"
   },
   "repository": {
